--- a/Practice/index.html
+++ b/Practice/index.html
@@ -14,7 +14,8 @@
         <li><a href="practice.html">Html practice</a></li><br>
         <li><a href="scrolling.html">Css : Scrolling sections</a></li><br>
         <li><a href="css_prac1.html">Css : Div-centering,etc</a></li><br>
-        <li><a href="navigation-own/">Css : nav-bar-own</a></li><br>
+        <li><a href="navigation-own/">Css : nav-bar-own-1</a></li><br>
+        <li><a href="navbar-own-2">Css : nav-bar-own-2</a></li><br>
     </ul>
 </body>
 </html>
