--- a/Practice/navbar-own-2/index.html
+++ b/Practice/navbar-own-2/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <nav>
+        <a href="#" class="title">Website</a>
        <input type="checkbox" id="sidebar-active">
        <label for="sidebar-active" class="open-sidebar-button">
             <svg xmlns="http://www.w3.org/2000/svg" height="32px" viewBox="0 -960 960 960" width="32px"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
@@ -18,11 +19,11 @@
                 <svg xmlns="http://www.w3.org/2000/svg" height="32px" viewBox="0 -960 960 960" width="32px" ><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
             </label>
 
-            <a href="#" class="title">Website</a>
             <a href="#">Home</a>
             <a href="#">About</a>
             <a href="#">Product</a>
             <a href="#">Contact</a>
+            <a href="..">back</a>
        </div>
     </nav>
 </body>
